--- a/Jotter/JS Basics/index.html
+++ b/Jotter/JS Basics/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="style.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,7 +9,14 @@
 </head>
 <body>
     <h1>Hello!!!!!</h1>
-
+    <div class="Inline">
+        <h3>Your random number is:</h3>
+        <h3 id="rand_int"></h3>
+    </div>
+    <div class="Inline">
+        <h3>Your word is:&nbsp</h3>
+        <h3 id="rand_word"></h3>
+    </div>
     <script src="index.js"></script>
 </body>
 </html>
