--- a/Jotter/JS Basics/index.html
+++ b/Jotter/JS Basics/index.html
@@ -10,13 +10,17 @@
 <body>
     <h1>Hello!!!!!</h1>
     <div class="Inline">
-        <h3>Your random number is:</h3>
-        <h3 id="rand_int"></h3>
+        <h3>Your number of lives:&nbsp</h3>
+        <h3 id="lives"></h3>
     </div>
     <div class="Inline">
         <h3>Your word is:&nbsp</h3>
         <h3 id="rand_word"></h3>
     </div>
+    <div class="Inline">
+        <h3 id="status"></h3>
+    </div>
+    <button id="button" onclick="PlayGame()">Click to input a letter</button>
     <script src="index.js"></script>
 </body>
 </html>
