--- a/Homepage/index.html
+++ b/Homepage/index.html
@@ -13,6 +13,10 @@
         This is the profile page of Princewill Ehimare Okosun. To get through to me kindly dial <u>+2347017884854</u> or mail <a href="#"><u>okosunprincewill@gmail.com</u></a>.
     </div>
     <div class="body">
+        <div class="tabs">
+            <ul>
+                <li><a href="ideas.html"><u>ideas</u></a></li>
+        </div>
         <h1 class="rainbow">Profile</h1>
         <pre>
             Princewill is quick-witted and has exemplary analytical skills. During our multiple office hours discussions 
