--- a/Homepage/ideas.html
+++ b/Homepage/ideas.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div id="spacebar" class="divs">
-        This is the profile page of Princewill Ehimare Okosun. To get through to me kindly dial <u>+2347017884854</u> or mail <a href="#"><u>okosunprincewill@gmail.com</u></a>.
+        This is the profile page of Princewill Ehimare Okosun. To get through to me kindly dial <u>+2347017884854</u> or mail <a href="#"><u>okosunprincewill@gmail.com</u></a>. <div id="right"><a  href=index.html><u>Homepage</u></a></div>
     </div>
     <div class="body_ideas">
          <h1 class="center_forward">THIS IS THE HEADER</h1>
