--- a/Homepage/ideas.html
+++ b/Homepage/ideas.html
@@ -17,3 +17,4 @@
 <footer>This is the footer of this website.</footer>
 <script src="myscripts.js"></script>
 </html>
+<!--THIS PAGE SHOULD BE PASSCODED ON 2 LEVELS, 1 FOR EVERYONE, 1 FOR ME-->
