--- a/Homepage/index.html
+++ b/Homepage/index.html
@@ -16,6 +16,9 @@
         <div class="tabs">
             <ul>
                 <li><a href="ideas.html"><u>ideas</u></a></li>
+                <li><a href="projects.html"><u>projects</u></a></li>
+                <li><a href="contact.html"><u>contact</u></a></li>
+            </ul>
         </div>
         <h1 class="rainbow">Profile</h1>
         <pre>
