--- a/Homepage/projects.html
+++ b/Homepage/projects.html
@@ -11,8 +11,17 @@
     <div id="spacebar" class="divs">
         This is the profile page of Princewill Ehimare Okosun. To get through to me kindly dial <u>+2347017884854</u> or mail <a href="#"><u>okosunprincewill@gmail.com</u></a>. <div id="right"><a  href=index.html><u>Homepage</u></a></div>
     </div>
+    
     <div class="body_ideas">
          <h1 class="center_forward">THIS IS THE HEADER</h1>
+         <div class="tabs">
+            <ul>
+                <li><a href="index.html"><u>index</u></a></li>
+                <li><a href="ideas.html"><u>ideas</u></a></li>
+                <li><a href="contact.html"><u>contact</u></a></li>
+            </ul>
+        </div>
+    </div>
 </body>
 <footer>This is the footer of this website.</footer>
 <script src="myscripts.js"></script>
