--- a/Homepage/contact.html
+++ b/Homepage/contact.html
@@ -5,14 +5,43 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
+    <!-- CSS only -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <!-- JavaScript Bundle with Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <title>Ehi's Homepage</title>
 </head>
 <body>
     <div id="spacebar" class="divs">
         This is the profile page of Princewill Ehimare Okosun. To get through to me kindly dial <u>+2347017884854</u> or mail <a href="#"><u>okosunprincewill@gmail.com</u></a>. <div id="right"><a  href=index.html><u>Homepage</u></a></div>
     </div>
+    
     <div class="body_ideas">
-         <h1 class="center_forward">THIS IS THE HEADER</h1>
+        <h1 class="center_forward">THIS IS THE HEADER</h1>
+        <div class="tabs">
+            <ul>
+                <li><a href="index.html"><u>index</u></a></li>
+                <li><a href="ideas.html"><u>ideas</u></a></li>
+                <li><a href="projects.html"><u>projects</u></a></li>
+            </ul>
+        </div>
+        <!--Insert Picture-->
+        <!--Insert Contact Card-->
+        <div>
+            <div class="container">
+                <div class="row">
+                    <div class="col">
+                        <img src="pro.jpg" alt="StrictHornet in Picture">
+                        <img src="imgl.jpg" alt="StrictHornet in Picture" width="960" height="540">
+                    </div>
+
+                    <div class="col">
+                        Column Asda
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 <footer>This is the footer of this website.</footer>
 <script src="myscripts.js"></script>
