--- a/Homepage/ideas.html
+++ b/Homepage/ideas.html
@@ -13,6 +13,15 @@
     </div>
     <div class="body_ideas">
          <h1 class="center_forward">THIS IS THE HEADER</h1>
+         
+        <div class="tabs">
+            <ul>
+                <li><a href="index.html"><u>index</u></a></li>
+                <li><a href="projects.html"><u>projects</u></a></li>
+                <li><a href="contact.html"><u>contact</u></a></li>
+            </ul>
+        </div>
+    </div>
 </body>
 <footer>This is the footer of this website.</footer>
 <script src="myscripts.js"></script>
