--- a/Homepage/index.html
+++ b/Homepage/index.html
@@ -1,3 +1,10 @@
+<!--Buttons-->
+<!--Code-->
+<!--HR-->
+<!--script-->
+<!--table-->
+<!--video -->
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -70,6 +77,13 @@
             <li>Intro to AI (University of Helsinki)</li>
             <li>CS50x (Harvard University)</li>
         </ol>
+
+        <h1 class="rainbow">Music</h1>
+        <ul>
+            <li><audio>XXXXXXXXXXXXXXXXXXXXXX</audio></li>
+            <li></li>
+            <li></li>
+        </ul>
     </div>
 </body>
 <footer>This is the footer of this website.</footer>
