--- a/Homepage/contact.html
+++ b/Homepage/contact.html
@@ -20,9 +20,9 @@
         <h1 class="center_forward">THIS IS THE HEADER</h1>
         <div class="tabs">
             <ul>
-                <li><a href="index.html"><u>index</u></a></li>
-                <li><a href="ideas.html"><u>ideas</u></a></li>
-                <li><a href="projects.html"><u>projects</u></a></li>
+                <li><button type="button" class="btn btn-warning"><a href="index.html"><u>index</u></a></button></li>
+                <li><button type="button" class="btn btn-warning"><a href="projects.html"><u>projects</u></a></button></li>
+                <li><button type="button" class="btn btn-warning"><a href="ideas.html"><u>ideas</u></a></button></li>
             </ul>
         </div>
         <!--Insert Picture-->
