--- a/Homepage/ideas.html
+++ b/Homepage/ideas.html
@@ -5,6 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
+    <!-- CSS only -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <!-- JavaScript Bundle with Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <title>Ehi's Homepage</title>
 </head>
 <body>
@@ -16,9 +20,9 @@
          
         <div class="tabs">
             <ul>
-                <li><a href="index.html"><u>index</u></a></li>
-                <li><a href="projects.html"><u>projects</u></a></li>
-                <li><a href="contact.html"><u>contact</u></a></li>
+                <li><button type="button" class="btn btn-warning"><a href="index.html"><u>ideas</u></a></button></li>
+                <li><button type="button" class="btn btn-warning"><a href="projects.html"><u>projects</u></a></button></li>
+                <li><button type="button" class="btn btn-warning"><a href="contact.html"><u>contact</u></a></button></li>
             </ul>
         </div>
     </div>
