--- a/Homepage/index.html
+++ b/Homepage/index.html
@@ -4,7 +4,7 @@
 <!--script-->
 <!--table-->
 <!--video -->
-<!----------------->
+<!--------CREATE LINKEDIN LINK PREVIEW USING JS--------->
 <!--div-->
 <!--ul/ol-->
 <!--pre-->
@@ -88,9 +88,11 @@
 
         <h1 class="rainbow">Music</h1>
         <ul>
-            <li><audio>XXXXXXXXXXXXXXXXXXXXXX</audio></li>
-            <li></li>
-            <li></li>
+            <li>
+                <audio controls>
+                <source src = "Love.mp3" type="audio/mpeg">
+                </audio>
+            </li>
         </ul>
     </div>
 </body>
