--- a/Homepage/index.html
+++ b/Homepage/index.html
@@ -1,10 +1,9 @@
-<!--Buttons-->
 <!--Code-->
 <!--HR-->
 <!--script-->
 <!--table-->
 <!--video -->
-<!--------CREATE LINKEDIN LINK PREVIEW USING JS--------->
+<!--------CREATE LINKEDIN LINK PREVIEW USING JS put script in page--------->
 <!--div-->
 <!--ul/ol-->
 <!--pre-->
