--- a/Homepage/projects.html
+++ b/Homepage/projects.html
@@ -25,6 +25,8 @@
                 <li><button type="button" class="btn btn-warning"><a href="contact.html"><u>contact</u></a></button></li>
             </ul>
         </div>
+        <hr>
+        <h1><code style="color:aliceblue; height: 100px;">hello world!</code></h1>
     </div>
 </body>
 <footer>This is the footer of this website.</footer>
