--- a/Homepage/index.html
+++ b/Homepage/index.html
@@ -1,5 +1,3 @@
-<!--Code-->
-<!--HR-->
 <!--script-->
 <!--table-->
 <!--video -->
@@ -92,6 +90,7 @@
                 <source src = "Love.mp3" type="audio/mpeg">
                 </audio>
             </li>
+            <li><video width="384" height="216" src="naruto.mp4" controls></video></li>
         </ul>
     </div>
 </body>
