--- a/Homepage/projects.html
+++ b/Homepage/projects.html
@@ -10,6 +10,23 @@
     <!-- JavaScript Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <title>Ehi's Homepage</title>
+    <style>
+        table {
+          font-family: arial, sans-serif;
+          border-collapse: collapse;
+          width: 100%;
+        }
+        
+        td, th {
+          border: 1px solid #dddddd;
+          text-align: left;
+          padding: 8px;
+        }
+        
+        tr:nth-child(even) {
+          background-color: #dddddd;
+        }
+    </style>
 </head>
 <body>
     <div id="spacebar" class="divs">
@@ -27,6 +44,33 @@
         </div>
         <hr>
         <h1><code style="color:aliceblue; height: 100px;">hello world!</code></h1>
+        table -  proj name, technologies, year, goal
+        <table>
+            <tr>
+                <th>Project</th>
+                <th>Technologies Used</th>
+                <th>Year</th>
+                <th>Goal</th>
+            </tr>
+            <tr>
+                <td>Shuttle</td>
+                <td>Node JS, HTML, CSS, Bootstrap, Firebase</td>
+                <td>2019</td>
+                <td>TO enable ride-sharing within an organisation</td>
+            </tr>
+            <tr>
+                <td>Kinect</td>
+                <td>Java</td>
+                <td>2017</td>
+                <td>Mobile dating application</td>
+            </tr>
+            <tr>
+                <td>AutoRec</td>
+                <td>Python, Openpyxl, Tkinter</td>
+                <td>2020</td>
+                <td>To enable service level agreement reconciliation</td>
+            </tr>
+        </table>
     </div>
 </body>
 <footer>This is the footer of this website.</footer>
