--- a/Homepage/index.html
+++ b/Homepage/index.html
@@ -53,6 +53,8 @@
                 <p>Home Science Association Secondary School, Alakuko, Lagos.</p>
             <li><h3>Tertiary Education</h3></li>
                 <p>Covenant University, Otta, Ogun.</p>
+            <li><h3>Advanced Level Education</h3></li>
+                <p>University Of Liverpool, Liverpool, United Kingdom.</p>
         </ul>
     
         <h1 class="rainbow">Interests</h1>
