--- a/Homepage/projects.html
+++ b/Homepage/projects.html
@@ -70,6 +70,12 @@
                 <td>2020</td>
                 <td>To enable service level agreement reconciliation</td>
             </tr>
+            <tr>
+                <td>Machine Learning Methods and Regression Comparison</td>
+                <td>Python, MatLab</td>
+                <td>2022</td>
+                <td>Facilitate grasp on ML topics.</td>
+            </tr>
         </table>
     </div>
 </body>
