--- a/ImageFilter/index.html
+++ b/ImageFilter/index.html
@@ -10,7 +10,7 @@
     <title>Filter</title>
 </head>
 <body onload="IN()">
-    <h1>HOMEPAGE</h1>
+    <h1>- HOMEPAGE -</h1>
 
     <div class="file-upload-wrapper">
         <input type="file" class="file-upload" />
@@ -24,5 +24,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     <script src="index.js"></script>
+    <script src="sentiment_analysis.js"></script>
+
 </body>
 </html>
